# Okey

./: .gitignore
client/: .clang-format  CMakeLists.txt  vcpkg.json
client/cmake/: settings.cmake
client/src/: CMakeLists.txt
client/src/OkeyClient/: CMakeLists.txt
client/src/OkeyClient/include/: mainwindow.h  settings.h
client/src/OkeyClient/source/: main.cpp  mainwindow.cpp
client/src/OkeyClient/ui/: mainwindow.ui
server/: Cargo.toml
server/src/: global.rs  main.rs
server/src/api/: echo.rs  game.rs  lobby.rs  mod.rs  ping.rs  room.rs
server/src/model/: mod.rs  room.rs
